--- a/Fine_Tuning_TinyLlama.ipynb
+++ b/Fine_Tuning_TinyLlama.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -183,22 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf03704e46854d118c94a1554e666504",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/96 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 96/96 [00:00<00:00, 8716.76 examples/s]\n"
+     ]
     }
    ],
    "source": [
@@ -234,18 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\RishabhSetiya\\AppData\\Roaming\\Python\\Python312\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -295,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -473,9 +457,9 @@
     "\n",
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_id,\n",
-    "    quantization_config=quantization_config,\n",
+    "    # quantization_config=quantization_config, #Kundan: Not supported on MAC\n",
     "    torch_dtype=torch.bfloat16,\n",
-    "    device_map=\"cuda:0\",\n",
+    "    device_map=\"auto\",\n",
     "    trust_remote_code=True,\n",
     ")\n",
     "\n",
@@ -487,7 +471,8 @@
     "# 5. Apply PEFT / LoRA adapters\n",
     "# ----------------------------\n",
     "# Prepare model for k-bit training\n",
-    "base_model = prepare_model_for_kbit_training(base_model)\n",
+    "# Kundan: since we are not doing quantisation, this step is not neeeded as This function from the PEFT library specifically prepares a quantized model for training.\n",
+    "# base_model = prepare_model_for_kbit_training(base_model)\n",
     "\n",
     "model = replace_proj_with_moe_lora(\n",
     "    base_model,\n",
@@ -501,9 +486,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'NoneType' object has no attribute 'cadam32bit_grad_fp32'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kundankumar/Documents/CAI/.venv/lib/python3.13/site-packages/bitsandbytes/cextension.py:34: UserWarning: The installed version of bitsandbytes was compiled without GPU support. 8-bit optimizers, 8-bit multiplication, and GPU quantization are unavailable.\n",
+      "  warn(\"The installed version of bitsandbytes was compiled without GPU support. \"\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "peft_config = LoraConfig(\n",
     "    r=8,\n",
@@ -519,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -528,26 +540,7 @@
     "id": "8c8SrmCyBzIZ",
     "outputId": "2864e983-509e-4798-ac15-f322e9a8a1e4"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'question': 'What was the Total revenue in 2023?',\n",
-       "  'generated_answer': \"I don't have access to the latest financial data of makemytrip. However, according to the company's website, the total revenue for the financial year 2023 is not mentioned. It is only mentioned that the\"},\n",
-       " {'question': 'What was the Total revenue in 2023?',\n",
-       "  'generated_answer': \"I don't have access to the latest financial data of makemytrip. However, according to the company's website, the total revenue for the financial year 2023 is not mentioned. It is only mentioned that the\"},\n",
-       " {'question': 'What was the Total revenue in 2023?',\n",
-       "  'generated_answer': \"I don't have access to the latest financial data of makemytrip. However, according to the company's website, the total revenue for the financial year 2023 is not mentioned. It is only mentioned that the\"},\n",
-       " {'question': 'What was the Total revenue in 2023?',\n",
-       "  'generated_answer': \"I don't have access to the latest financial data of makemytrip. However, according to the company's website, the total revenue for the financial year 2023 is not mentioned. It is only mentioned that the\"},\n",
-       " {'question': 'How much was the Total revenue in 2023?',\n",
-       "  'generated_answer': \"I don't have access to the latest financial data of makemytrip. However, according to the company's website, the total revenue for the financial year 2023 was not mentioned in the given text. You can\"}]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the fine-tuned model\n",
     "baseline_responses = []\n",
