--- a/search_final.ipynb
+++ b/search_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4304c100",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/kundankumar/nltk_data...\n"
+      "[nltk_data]     /Users/kundankumar/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -25,19 +26,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "Device set to use mps:0\n"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "Error in faiss::FileIOReader::FileIOReader(const char *) at /Users/runner/work/faiss-wheels/faiss-wheels/third-party/faiss/faiss/impl/io.cpp:70: Error: 'f' failed: could not open data/index_merged/faiss_merged.index for reading: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[32m/var/folders/r8/q44njl1d03l7rz6wrzsn62y00000gn/T/ipykernel_27228/4083852906.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     30\u001b[39m \n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# ---------------- Load Indexes & Models ----------------\u001b[39;00m\n\u001b[32m     32\u001b[39m print(\u001b[33m\"Loading FAISS, BM25, metadata, and models ...\"\u001b[39m)\n\u001b[32m     33\u001b[39m \n\u001b[32m---> \u001b[39m\u001b[32m34\u001b[39m faiss_index = faiss.read_index(FAISS_PATH)\n\u001b[32m     35\u001b[39m \n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m open(BM25_PATH, \u001b[33m\"rb\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     37\u001b[39m     bm25_obj = pickle.load(f)\n",
-      "\u001b[32m~/Documents/CAI/.venv/lib/python3.13/site-packages/faiss/swigfaiss.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(*args)\u001b[39m\n\u001b[32m  11774\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m read_index(*args):\n\u001b[32m> \u001b[39m\u001b[32m11775\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _swigfaiss.read_index(*args)\n",
-      "\u001b[31mRuntimeError\u001b[39m: Error in faiss::FileIOReader::FileIOReader(const char *) at /Users/runner/work/faiss-wheels/faiss-wheels/third-party/faiss/faiss/impl/io.cpp:70: Error: 'f' failed: could not open data/index_merged/faiss_merged.index for reading: No such file or directory"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexes and models loaded!\n",
+      "[Guardrail] Accepted (semantic match 0.54)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kundankumar/Documents/CAI/.venv/lib/python3.13/site-packages/transformers/pipelines/question_answering.py:395: FutureWarning: Passing a list of SQuAD examples to the pipeline is deprecated and will be removed in v5. Inputs should be passed using the `question` and `context` keyword arguments instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Query: What is the revenue from air ticketing for  year 2024?\n",
+      "\n",
+      "Final Answer:\n",
+      " 201246\n",
+      "\n",
+      "Top supporting docs:\n",
+      "[100-3] (chunk=100, score=1.601) -> Total current liabilities values: {\"2023\": \"453658\", \"2024\": \"297574\"} Total liabilities values: {\"2023\": \"483769\", \"202...\n",
+      "[100-12] (chunk=100, score=-1.283) -> Hotels and packages values: {\"2023\": \"337686\", \"2024\": \"435542\", \"2025\": \"520411\"} Bus ticketing values: {\"2023\": \"74873...\n",
+      "[100-11] (chunk=100, score=-1.500) -> Deferred tax liabilities, net values: {\"2024\": \"4754\", \"2025\": \"2526\"} Other non-current liabilities values: {\"2024\": \"1...\n",
+      "[400-3] (chunk=400, score=-4.645) -> Total revenue values: {\"2023\": \"593036\", \"2024\": \"782524\", \"2025\": \"978336\"} Other income values: {\"2023\": \"2798\", \"2024...\n",
+      "[100-15] (chunk=100, score=-5.389) -> Profit (loss) for the year values: {\"2023\": \"(11168)\", \"2024\": \"216743\", \"2025\": \"95274\"} Owners of the Company values: ...\n"
      ]
     }
    ],
