feat: enhance streamlit app with model availability checks and inference diagnostics

--- a/Fine_Tuning_TinyLlama.ipynb
+++ b/Fine_Tuning_TinyLlama.ipynb
@@ -2216,6 +2216,138 @@
     "    print(\"❌ HF_API_KEY not found in environment variables\")\n",
     "    print(\"Please make sure your .env file contains: HF_API_KEY=your_token_here\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fix Model Metadata for Inference API\n",
+    "\n",
+    "After uploading the model, we need to update the metadata to make it compatible with HuggingFace's Inference API. The key changes are:\n",
+    "\n",
+    "1. **`pipeline_tag: text-generation`** - Tells HF this is a text generation model\n",
+    "2. **`library_name: transformers`** - Changes from \"peft\" to \"transformers\" \n",
+    "3. **Proper tags** - Adds \"text-generation\" and other relevant tags\n",
+    "\n",
+    "This ensures the model can be used via the Inference API instead of loading locally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔧 Updating model metadata for Inference API compatibility...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No files have been modified since last commit. Skipping to prevent empty commit.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model metadata updated successfully!\n",
+      "🕐 Please wait 5-10 minutes for the Inference API to recognize the changes.\n",
+      "🔗 Check your model: https://huggingface.co/kundan621/tinyllama-makemytrip-financial-qa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Update model metadata for Inference API compatibility\n",
+    "print(\"🔧 Updating model metadata for Inference API compatibility...\")\n",
+    "\n",
+    "try:\n",
+    "    from huggingface_hub import HfApi\n",
+    "    \n",
+    "    api = HfApi()\n",
+    "    model_id = repo_name  # Using the same repo_name from previous cell\n",
+    "    \n",
+    "    # Create updated model card with proper pipeline_tag\n",
+    "    updated_model_card = f\"\"\"---\n",
+    "language:\n",
+    "- en\n",
+    "pipeline_tag: text-generation\n",
+    "library_name: transformers\n",
+    "base_model: TinyLlama/TinyLlama-1.1B-Chat-v1.0\n",
+    "tags:\n",
+    "- finance\n",
+    "- makemytrip\n",
+    "- financial-qa\n",
+    "- peft\n",
+    "- lora\n",
+    "- text-generation\n",
+    "license: apache-2.0\n",
+    "datasets:\n",
+    "- custom\n",
+    "---\n",
+    "\n",
+    "# TinyLlama MakeMyTrip Financial QA\n",
+    "\n",
+    "This model is a fine-tuned version of TinyLlama/TinyLlama-1.1B-Chat-v1.0 specifically for answering financial questions about MakeMyTrip.\n",
+    "\n",
+    "## Model Details\n",
+    "\n",
+    "- **Base Model**: TinyLlama/TinyLlama-1.1B-Chat-v1.0\n",
+    "- **Fine-tuning Method**: LoRA (Low-Rank Adaptation) with PEFT\n",
+    "- **Domain**: Financial Question Answering\n",
+    "- **Company**: MakeMyTrip\n",
+    "- **Language**: English\n",
+    "\n",
+    "## Usage\n",
+    "\n",
+    "```python\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"{model_id}\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"{model_id}\")\n",
+    "\n",
+    "# Format your prompt\n",
+    "prompt = \"<|system|>\\\\nYou are a helpful assistant that provides financial data from MakeMyTrip reports.</s>\\\\n<|user|>\\\\nWhat was the total revenue in 2024?</s>\\\\n<|assistant|>\\\\n\"\n",
+    "\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
+    "outputs = model.generate(**inputs, max_new_tokens=100, temperature=0.7)\n",
+    "response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+    "```\n",
+    "\n",
+    "## Training Data\n",
+    "\n",
+    "The model was fine-tuned on MakeMyTrip financial statements and reports covering:\n",
+    "- Revenue data (2023-2025)\n",
+    "- Financial metrics\n",
+    "- Balance sheet information\n",
+    "- Cash flow statements\n",
+    "\n",
+    "## Limitations\n",
+    "\n",
+    "This model is specifically trained for MakeMyTrip financial data and may not perform well on general financial questions or other companies' data.\n",
+    "\"\"\"\n",
+    "\n",
+    "    # Upload the updated README\n",
+    "    api.upload_file(\n",
+    "        path_or_fileobj=updated_model_card.encode(),\n",
+    "        path_in_repo=\"README.md\",\n",
+    "        repo_id=model_id,\n",
+    "        token=hf_token,\n",
+    "        commit_message=\"Update model card with proper pipeline_tag for Inference API compatibility\"\n",
+    "    )\n",
+    "    \n",
+    "    print(\"✅ Model metadata updated successfully!\")\n",
+    "    print(\"🕐 Please wait 5-10 minutes for the Inference API to recognize the changes.\")\n",
+    "    print(f\"🔗 Check your model: https://huggingface.co/{model_id}\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error updating metadata: {e}\")\n",
+    "    print(\"💡 You can manually update the model card on HuggingFace to add 'pipeline_tag: text-generation'\")"
+   ]
   }
  ],
  "metadata": {
